--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,7 @@ a {
 }
 
 .header-menu__link {
+  display: inline-block;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -96,11 +97,12 @@ a {
 
 .header-menu__link.active::after {
   content: "";
+  display: block;
   width: 100%;
   height: 4px;
   background: #2196f3;
   position: absolute;
-  bottom: -2px;
+  bottom: -1px;
   left: 0;
   border-radius: 2px;
 }
@@ -291,21 +293,26 @@ a {
 .features-section {
   padding: 94px 0;
   padding-bottom: 0;
-}
-
-.card-features {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
 
-.card-features__item {
+.features-section__item {
   width: calc(100% / 4 - 30px);
   margin-left: 30px;
   display: block;
 }
 
-.card-features__title {
+.features-section__icon {
+  display: block;
+  padding: 25px 100px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+
+.features-section__title {
   font-weight: bold;
   font-size: 14px;
   line-height: 1.42;
@@ -315,23 +322,14 @@ a {
   margin-bottom: 10px;
 }
 
-.card-features__text {
+.features-section__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
 }
 
-.icon-features {
-  display: flex;
-  padding: 25px 100px;
-  align-items: center;
-  background-color: #f5f4fa;
-  border-radius: 4px;
-  margin-bottom: 30px;
-}
-
-.card-features__item:nth-child(1) {
+.features-section__item:nth-child(1) {
   margin-left: 0;
 }
 
@@ -936,7 +934,7 @@ a {
 .card-porfolio__item {
   margin-left: 30px;
   margin-top: 30px;
-  width: calc(100% / 3 - 30px);
+  width: calc(101% / 3 - 30px);
   display: flex;
   flex-direction: column;
 }
