--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,9 +1,7 @@
 .features-section {
   padding: 94px 0;
   padding-bottom: 0;
-}
 
-.card-features {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -12,6 +10,14 @@
     width: calc(100% / 4 - 30px);
     margin-left: 30px;
     display: block;
+  }
+
+  &__icon {
+    display: block;
+    padding: 25px 100px;
+    background-color: #f5f4fa;
+    border-radius: 4px;
+    margin-bottom: 30px;
   }
 
   &__title {
@@ -29,17 +35,20 @@
     letter-spacing: $letter-spacing-03;
     color: $text-color-2;
   }
+
+  &__item:nth-child(1) {
+    margin-left: 0;
+  }
 }
 
-.icon-features {
-  display: flex;
-  padding: 25px 100px;
-  align-items: center;
-  background-color: #f5f4fa;
-  border-radius: 4px;
-  margin-bottom: 30px;
-}
+// .features-section__icon {
+//   display: block;
+//   padding: 25px 100px;
+//   background-color: #f5f4fa;
+//   border-radius: 4px;
+//   margin-bottom: 30px;
+// }
 
-.card-features__item:nth-child(1) {
-  margin-left: 0;
-}
+// .features-section__item:nth-child(1) {
+//   margin-left: 0;
+// }
