--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -27,6 +27,7 @@
   }
 
   &__link {
+    display: inline-block;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -46,12 +47,13 @@
 
     &.active::after {
       content: "";
+      display: block;
       width: 100%;
       height: 4px;
 
       background: $bg-color-1;
       position: absolute;
-      bottom: -2px;
+      bottom: -1px;
       left: 0;
       border-radius: 2px;
     }
